Limo/ros-server-2.log

> ros-server@1.0.0 start /home/ros-server
> nodemon

[33m[nodemon] 2.0.22[39m
[33m[nodemon] to restart at any time, enter `rs`[39m
[33m[nodemon] watching path(s): app/**/*[39m
[33m[nodemon] watching extensions: ts[39m
[32m[nodemon] starting `npm run build && node --inspect out/main.js`[39m

> ros-server@1.0.0 build /home/ros-server
> rimraf out && tsc --project tsconfig.app.json

Debugger listening on ws://127.0.0.1:9229/b8be850a-c32e-4570-bb26-b79e71f03b60
For help, see: https://nodejs.org/en/docs/inspector
Starting connection for the nodes
ROSLib uses utf8 encoding by default.It would be more efficent to use ascii (if possible)
/home/ros-server/node_modules/ws/lib/websocket.js:675
      throw new SyntaxError(`Invalid URL: ${address}`);
      ^

SyntaxError: Invalid URL: ws://:9090
    at initAsClient (/home/ros-server/node_modules/ws/lib/websocket.js:675:13)
    at new WebSocket (/home/ros-server/node_modules/ws/lib/websocket.js:85:7)
    at Ros.connect (/home/ros-server/node_modules/roslib/src/core/Ros.js:77:18)
    at RosTCP.connect (/home/ros-server/node_modules/roslib/src/node/RosTCP.js:43:27)
    at RosTCP.Ros (/home/ros-server/node_modules/roslib/src/core/Ros.js:55:10)
    at new RosTCP (/home/ros-server/node_modules/roslib/src/node/RosTCP.js:20:7)
    at NodeMovement.initNodeMovement (/home/ros-server/out/classes/ros/nodes/node-movement.js:24:20)
    at NodeManager.startNodes (/home/ros-server/out/classes/nodes-manager.js:21:27)
    at SocketServer.connectSocketServer (/home/ros-server/out/controllers/socket-server.js:27:26)
    at Server.init (/home/ros-server/out/server.js:51:28)

Node.js v19.8.1
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
